--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">08 Nov 2020, 09:37</h3><br>
+      <br><br><h3 class="wx-center">08 Nov 2020, 09:38</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,19 +38,19 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>24.9&deg;C</td>
+              <td>24.8&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>57%</td>
+              <td>58%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>0km/h</td>
+              <td>2km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>35&deg; (NE)</td>
+              <td>330&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>0.8</td>
+              <td>0.9</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>135W/m<sup>2</sup></td>
+              <td>142W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
