--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">08 Nov 2020, 10:04</h3><br>
+      <br><br><h3 class="wx-center">08 Nov 2020, 10:05</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>25.0&deg;C</td>
+              <td>24.9&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>57%</td>
+              <td>58%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>21&deg; (NNE)</td>
+              <td>85&deg; (E)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>181W/m<sup>2</sup></td>
+              <td>183W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
