--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">08 Nov 2020, 12:37</h3><br>
+      <br><br><h3 class="wx-center">08 Nov 2020, 12:38</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>56%</td>
+              <td>57%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>5km/h</td>
+              <td>3km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>59&deg; (ENE)</td>
+              <td>41&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.5</td>
+              <td>2.7</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>318W/m<sup>2</sup></td>
+              <td>380W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
