--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">08 Nov 2020, 14:38</h3><br>
+      <br><br><h3 class="wx-center">08 Nov 2020, 14:39</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,19 +38,19 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>25.0&deg;C</td>
+              <td>25.1&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>76%</td>
+              <td>77%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>323&deg; (NW)</td>
+              <td>27&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.0</td>
+              <td>1.8</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>490W/m<sup>2</sup></td>
+              <td>557W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
